--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,4 @@
+/* ---------------------------------- MAIN ---------------------------------- */
 body {
     margin: 0;
     display: flex;
@@ -11,23 +12,33 @@ body {
     background-color: #eee;
 }
 
-.controls-container {
-    display: grid;
-    gap: 10px;
-    grid-template-columns: repeat(6, 1fr);
-
-    background-color: #fff;
-    padding: 10px;
-    border-radius: 5px;
-    margin-bottom: 10px;
-    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
-}
-
 #canvas {
     width: 100%;
     height: 100vh;
     background-color: #fff;
     border-radius: 5px;
+    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+}
+
+/* --------------------------------- SPACES --------------------------------- */
+.space-y-4 > * + * {
+    margin-top: 1rem;
+}
+
+.space-x-4 > * + * {
+    margin-left: 1rem;
+}
+
+/* -------------------------------- CONTROLS -------------------------------- */
+.controls-container {
+    display: grid;
+    gap: 10px;
+    grid-template-columns: repeat(7, 1fr);
+
+    background-color: #fff;
+    padding: 10px;
+    border-radius: 5px;
+    margin-bottom: 10px;
     box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
 }
 
@@ -69,4 +80,80 @@ input[type="color"] {
     padding: 2px;
     border-radius: 5px;
     box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
-  }
+}
+
+/* ---------------------------------- MODAL --------------------------------- */
+
+.modal-container {
+    background-color: rgba(0, 0, 0, .3);
+    position: absolute;
+    inset: 0;
+    z-index: 1000;
+}
+
+.modal-window {
+    background-color: #fff;
+    position: fixed;
+    padding: 10px 20px;
+    width: 50%;
+    top: 0;
+    left: 0;
+    transform: translate(calc(50vw - 50%), calc(50vh - 50%));
+    border-radius: 5px;
+}
+
+.modal-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.modal-header .modal-heading-text {
+    text-transform: uppercase;
+    margin: 0;
+    padding: 0;
+}
+
+.close-modal-btn {
+    border: none;
+    background-color: transparent;
+    cursor: pointer;
+    transition: transform .5s;
+}
+.close-modal-btn:hover {
+    transform: rotate(90deg);
+}
+
+.modal-body {
+    display: flex;
+    justify-content: center;
+}
+
+.modal-body .json-editor-area {
+    width: 100%;
+    border: 1px solid #d1d5db;
+    background-color: #f3f4f6;
+    border-radius: 5px;
+    padding: 10px;
+    outline: none;
+}
+
+.modal-footer {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.modal-footer-control {
+    background-color: #a855f7;
+    color: #fff;
+    text-transform: uppercase;
+    padding: 10px;
+    border: 0;
+    border-radius: 5px;
+    cursor: pointer;
+}
+.modal-footer-control:hover {
+    background-color: #a855f7;
+    opacity: .8;
+}
